Added highLight canvas elements and lines, added custom line class, added function to delete elements on canvas, added canvas element interface. Hardcoded interface for kotel

--- a/CanvasDragNDrop/UserControls/LogicElement.xaml
+++ b/CanvasDragNDrop/UserControls/LogicElement.xaml
@@ -8,15 +8,22 @@
               >
     <Canvas
         MouseDown="Canvas_MouseDown"
-        x:Name="LogicElementCanvas">
+       
+        x:Name="LogicElementCanvas"
+        
+        >
 
         <Rectangle
             Fill="{Binding color}"
             Height="{Binding height}" 
-            Width="{Binding width}">
+            Width="{Binding width}"
+            ToolTip="{Binding title}"
+            ToolTipService.InitialShowDelay="5">
         </Rectangle>
 
-        <Border BorderThickness="1" BorderBrush="Black" 
+        <Border 
+            x:Name="logicElementBorder"
+            BorderThickness="1" BorderBrush="Black" 
             Height="{Binding height}" 
             Width="{Binding width}">
             <TextBlock 
