--- a/CanvasDragNDrop/Windows/FakeComposBlockWindow.xaml
+++ b/CanvasDragNDrop/Windows/FakeComposBlockWindow.xaml
@@ -1,52 +1,44 @@
-﻿<Window x:Class="CanvasDragNDrop.MainWindow"
+﻿<Window x:Class="CanvasDragNDrop.Windows.FakeComposBlockWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CanvasDragNDrop"
+        xmlns:local="clr-namespace:CanvasDragNDrop.Windows"
         mc:Ignorable="d"
-        Title="Главное окно" Height="450" Width="1000"
-        
-        
-        
-        WindowStartupLocation="CenterScreen"
-        KeyDown="canvas_KeyDown">
-    <Window.Resources>
-    </Window.Resources>
-    <StackPanel
+        Title="Создание составного блока" Height="450" Width="700"
         >
+    <!--WindowStartupLocation="CenterScreen"
+        KeyDown="canvas_KeyDown">
+<StackPanel
+        Background="LightCyan"
+        >
+
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="Проект">
-                <MenuItem Header="Создать новый проект"/>
-                <MenuItem Header="Сохранить изменения"/>
-                <MenuItem Header="Синхронизировать данные" Click="GetFromServerElemList"/>
+            <MenuItem Header="Добавить вход">
             </MenuItem>
-            <MenuItem Header="Инструменты" >
-                <MenuItem Header="Создать модель блока" Click="Button_Click_5"/>
-                <MenuItem Header="Создать составной блок" Click="CreateCompBlock"/>
-                <MenuItem Header="Добавить поток" Click="Button_Pen_Click"/>
+            <MenuItem Header="Добавить выход" >
             </MenuItem>
             <MenuItem Header="Добавить блок на рабочую область" ScrollViewer.HorizontalScrollBarVisibility="Visible" >
                 <StackPanel x:Name="UIElementList"/>
             </MenuItem>
-            <MenuItem Header="Меню пользователя" >
-                <MenuItem Header="Изменить логин/пароль"/>
-                <MenuItem Header="Посмотреть доступный проекты"/>
-                <MenuItem Header="Выйти"/>
+            <MenuItem Header="Добавить поток" Click="Button_Pen_Click"/>
+            <MenuItem Header="Сохранить" >
             </MenuItem>
         </Menu>
         <StackPanel 
             Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
             <StackPanel Margin="10">
-                <Button Height="40" Width="80" Margin="10" Background="OrangeRed">Расчёт</Button>
-                
+                --><!--<Button Height="40" Width="80" Margin="10" Background="OrangeRed">Расчёт</Button>--><!--
+                <TextBlock>Введите название:</TextBlock>
+                <TextBox ></TextBox>
+
             </StackPanel>
 
             <Canvas 
                 
                 Grid.Column="1"
                 Grid.Row="1"
-                Height="350" Width="700"
+                Height="300" Width="550"
                 x:Name="canvas"
                 AllowDrop="True" 
                 Background="LightGray" 
@@ -77,11 +69,11 @@
                 </DockPanel>
 
 
-                
+
             </Grid>
 
         </ScrollViewer>
-    </StackPanel>
-    
-    
+    </StackPanel>-->
+
+
 </Window>
