--- a/CanvasDragNDrop/dima/UserItems/BaseExpression.xaml
+++ b/CanvasDragNDrop/dima/UserItems/BaseExpression.xaml
@@ -6,27 +6,38 @@
              xmlns:local="clr-namespace:CanvasDragNDrop.UserItems"
              mc:Ignorable="d" d:DesignWidth="800">
     <StackPanel Background="#FFE4E4E4">
-        <WrapPanel Margin="10,5,10,0">
-            <Label Content="Номер выражения:" VerticalAlignment="Center"/>
-            <Label VerticalAlignment="Center" Content="{Binding ExpOrder, RelativeSource={RelativeSource AncestorType=UserControl}}" Width="50"/>
-        </WrapPanel>
-        <Border Background="White" Padding="5" Margin="10,0,10,10">
-            <Grid>
+        <Grid Margin="10,5,10,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="175"/>
-                <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Label Content="Используемые переменные:" Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right"/>
+            <WrapPanel Grid.Column="0">
+                <Label Content="Номер выражения:" VerticalAlignment="Center"/>
+                <Label VerticalAlignment="Center" Content="{Binding ExpOrder, RelativeSource={RelativeSource AncestorType=UserControl}}" Width="50"/>
+            </WrapPanel>
+            <WrapPanel HorizontalAlignment="Right" Grid.Column="1">
+                <Image Source="/Resources/arrow_up.png" Width="30" Height="30" Margin="20,0,0,0" MouseDown="MoveUpExpression"  />
+                <Image Source="/Resources/arrow_down.png" Width="30" Height="30" Margin="5,0,0,0" MouseDown="MoveDownExpression"/>
+                <Image Source="/Resources/delete.png" Width="30" Height="30" Margin="5,0,0,0" MouseDown="DeleteExpression"  />
+            </WrapPanel>
+        </Grid>
+        <Border Background="White" Padding="5" Margin="10,0,10,10">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="175"/>
+                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Label Content="Используемые переменные:" Grid.Row="0" Grid.Column="0" HorizontalContentAlignment="Right"/>
                 <Label Content="{Binding NeededVars, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="0,0,10,0" Grid.Column="1" Grid.ColumnSpan="2"/>
                 <TextBox Text="{Binding DefinedVariable, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="10,0,0,0" Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right"/>
-            <Label Content="=" HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="1"/>
+                <Label Content="=" HorizontalContentAlignment="Center" Grid.Row="1" Grid.Column="1"/>
                 <TextBox Text="{Binding Exp, RelativeSource={RelativeSource AncestorType=UserControl}}" VerticalAlignment="Center" Margin="0,0,10,0" MinWidth="170" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3"/>
-        </Grid>
+            </Grid>
         </Border>
     </StackPanel>
 </UserControl>
