Rename block model creation class from MainWindowD to BlockModelCreationWindow

--- a/CanvasDragNDrop/BlockModelCreationWindow/BlockModelCreationWindow.xaml
+++ b/CanvasDragNDrop/BlockModelCreationWindow/BlockModelCreationWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window xmlns:UserItems="clr-namespace:CanvasDragNDrop.UserItems"  x:Class="CanvasDragNDrop.MainWindowD"
+﻿<Window xmlns:UserItems="clr-namespace:CanvasDragNDrop.UserItems"  x:Class="CanvasDragNDrop.BlockModelCreationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
