Renamed some classes with postfix "Class", added corect index forming for new flows in block model creation window

--- a/CanvasDragNDrop/BlockModelCreationWindow/BlockModelCreationWindow.xaml
+++ b/CanvasDragNDrop/BlockModelCreationWindow/BlockModelCreationWindow.xaml
@@ -8,7 +8,7 @@
         x:Name="Window1"
         Title="Создание модели блока" Width="800" Height="800">
     <Window.DataContext>
-        <local:BlockModelCreation/>
+        <local:BlockModelCreationClass/>
     </Window.DataContext>
     <Grid>
         <TabControl>
